# surrealdb_builder

./: Cargo.toml
src/: api.rs  lazy.rs  lib.rs  preload.rs  resource.rs
src/api/: create.rs  delete.rs  dependencies.rs  merge.rs  patch.rs  select.rs  update.rs
src/lazy/: http.rs  mem.rs  rocksdb.rs  ws.rs
src/resource/: range.rs  value.rs
src/resource/value/: array.rs  edges.rs  id.rs  object.rs  thing.rs
test/: mirror.rs
