[package]
edition = "2021"
name = "surrealdb_builder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-once-cell = "^0.4.2"
anyhow = "1.0.66"
derive_builder = "^0.12.0"
flutter_rust_bridge = "^1.54.0"
match-template = "0.0.1"
once_cell = "^1.16.0"
paste = "^1.0.9"
serde = {version = "1.0.148", features = ["derive"]}
surrealdb = {path = "/Users/huangzheng/rusts/surrealdb/lib", default-features = false}
tokio = {version = "^1.21.2", default-features = false, features = ["macros", "rt", "sync"]}

[features]
# default = ["ws"]
# default = ["http"]
default = ["mem"]
http = ["surrealdb/protocol-http"]
mem = ["surrealdb/kv-mem"]
ws = ["surrealdb/protocol-ws"]
rocksdb = ["surrealdb/kv-rocksdb"]
